--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "eslint": "eslint 'src/**/*.js' 'src/**/*.jsx'"
+    "eslint": "eslint 'src/**/*.js' 'src/**/*.jsx'",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=토큰입력",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:5173 cypress:open",
+    "e2e:ci": "start-server-and-test dev http://localhost:5173 cypress:run"
   },
   "dependencies": {
     "@mui/icons-material": "^5.11.9",
@@ -38,42 +45,49 @@
     "zustand": "^4.3.5"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^7.0.27",
-    "@storybook/addon-essentials": "^7.0.27",
-    "@storybook/addon-interactions": "^7.0.27",
-    "@storybook/addon-links": "^7.0.27",
-    "@storybook/blocks": "^7.0.27",
-    "@storybook/react": "^7.0.27",
-    "@storybook/react-vite": "^7.0.27",
+    "@storybook/addon-actions": "8.3.0",
+    "@storybook/addon-essentials": "8.3.0",
+    "@storybook/addon-interactions": "8.3.0",
+    "@storybook/addon-links": "8.3.0",
+    "@storybook/blocks": "8.3.0",
+    "@storybook/react": "8.3.0",
+    "@storybook/react-vite": "8.3.0",
+    "@storybook/theming": "8.3.0",
+    "@storybook/preview-api": "8.3.0",
     "@storybook/testing-library": "^0.2.0",
     "@tanstack/react-query-devtools": "^4.29.23",
-    "@testing-library/cypress": "^9.0.0",
+    "@testing-library/cypress": "10.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "@vitest/ui": "^0.33.0",
+    "@vitest/ui": "2.1.1",
+    "chromatic": "11.10.2",
     "concurrently": "8.2.0",
+    "cypress": "13.14.2",
+    "cypress-real-events": "1.13.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cypress": "3.5.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
-    "eslint-plugin-vitest": "^0.2.6",
+    "eslint-plugin-vitest": "0.4.1",
     "jsdom": "^21.1.1",
-    "msw": "^1.2.2",
-    "msw-storybook-addon": "^1.8.0",
+    "msw": "^2.4.7",
+    "msw-storybook-addon": "2.0.3",
     "prettier": "^3.0.0",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.27",
-    "storybook-addon-react-router-v6": "1.0.2",
+    "start-server-and-test": "^2.0.0",
+    "storybook": "8.3.0",
+    "storybook-addon-remix-react-router": "3.0.0",
     "vite": "^4.4.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.33.0"
+    "vitest": "2.1.1"
   },
   "overrides": {
     "@testing-library/dom": "^9.0.1"
